ALS-5981: Add gene/consequence to variant spec (#105)
* ALS-5819: Update vcf loader to use variable variant indecies

* ALS-5981: Add gene and consequence to variant spec

* ALS-5981: Remove parallelization that may be causing a race condition losing data